--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lwp-portfolio",
-  "homepage": "https://LloydPolley.github.io/lwp-portfolio",
+  "name": "p",
+  "homepage": "https://LloydPolley.github.io/p",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
