--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "p",
-  "homepage": "https://LloydPolley.github.io/p",
+  "homepage": "https://LloydPolley.github.io/p/#/p",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
